--- a/index.html
+++ b/index.html
@@ -9,14 +9,9 @@
 <body>
     <div class="test">
         <div class="table">
-            <div class="table__front-side">
-                
-            </div>
-
-            <div class="table__backside">
-            </div>
+            
         </div>
-        <img src="пример.png" alt="">
+        <!-- <img src="пример.png" alt=""> -->
     </div>
 </body>
 </html>
