сверстал все но без анимации

--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 <body>
     <div class="test">
         <div class="table">
-            
+            <div class="table__front-side">
+                 <div class="table__circle-front-side">
+                 </div>
+            </div>
+            <div class="table__backside">
+            </div>
+
+            <div class="table__block-animation">
+                <div class="table__element table__element_pink"></div>
+                <div class="table__element table__element_black"></div>
+                <div class="table__element table__element_pink-light"></div>
+                <div class="table__element table__element_grey"></div>
+            </div>
         </div>
         <!-- <img src="пример.png" alt=""> -->
     </div>
