закончил анимацию таблетки

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Таблетка</title>
 </head>
-<body>
+<body style="height: 100vh;">
     <div class="test">
         <div class="table">
             <div class="table__front-side">
@@ -20,7 +20,6 @@
                 <div class="table__element table__element_pink"></div>
                 <div class="table__element table__element_black"></div>
                 <div class="table__element table__element_pink-light"></div>
-                <div class="table__element table__element_grey"></div>
             </div>
         </div>
         <!-- <img src="пример.png" alt=""> -->
